  NSHighResolutionCapable. (Björn "Vampire" Kautler)

- Set default colors for foreground and background in syntax highlighting
  style editor. (Dale Anson)

- Fix plugin bug #1853 XML plugin crashes on JDK9. Don't pre-connect
  the returned URLConnection in jeditresource: protocol handler (Eric Le Lay)

- Fix bug #3994, ConcurrentModificationException in ProperyManager. (Dale Anson)

}}}
{{{ UI Improvements

- Feature Request #520 Environment variables in Find dialog Directory
  (Alan Ezust)

- UI clean up, button spacing, borders, etc. (Dale Anson)

- Implemented feature request #493, ask for confirmation before closing all
  buffers. (Dale Anson)

- Refactor editing option pane into several tabs, allow user editing of modes
  lists, similar to editing the encoding options lists. This also fixes
  feature request #515. (Dale Anson)

}}}
{{{ Miscellaneous

}}}
{{{ API Changes

- new org.gjt.sp.utils.GenericGUIUtilities class, containing bits of
  org.gjt.sp.jedit.GUIUtilities suitable for the standalone TextArea
  package; all methods kept but deprecated and proxies (Eric Le Lay).

}}}
{{{ Editing

- Unicode brackets (Patch #566 - Makarius)

- Updates for objectrexx mode (Patch #585 - Jack J. Woehr)

- Mode for m4 macro processor language (Patch #586 - Jack J. Woehr)

- Drawj2d edit mode (Patch #573 - A. Vontobel)

- Rust edit mode raw string fix (Patch #575 -  Jordan Miner)

- Mode for Mavscript 2.0 (Patch #574 - A. Vontobel)

- New mode for swift (Patch #587 -  Wayne Zhang)

- New mode for Java 9 module-info.java files (Dale Anson)

- Updated CSS mode provided by AdamS (Ticket #4003 - Dale Anson)

}}}

}}}

{{{ Version 5.3.0

Thanks to Björn "Vampire" Kautler, Alan Ezust, Makarius, Jakub Holý,
Mark Corbin, Matt Galligan, Kevin Hunter Kesling, Darien Brown,
Matthieu Casanova, Sergey Mashkov, Dale Anson, Kevin Leblanc,
Marcelo Vanzin, Jordan Miner, yaraba, Marc M. Adkins, Scott McPeak,
Eric Le Lay for contributing to this release.

{{{ Bug Fixes
